added link to projects

--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
 <!-- End Styles -->
 
 <body>
+  <div>
+    <a href="/projects.html">Projects</a>
+  </div>
   <!-- Begin Form -->
   <form id="uploadForm" action="https://script.google.com/macros/s/AKfycbxcWkJzUySjqOR7DvwqQssb4I7VkP_yYyWVntdUFCzf4X1bZw/exec" method="POST">
     <h2>PS 108M - Upload a Submittal</h2>
