--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
     </header>
     <!-- End Page Title -->
 
+    <div id="projects-grid-divider"></div>
+
     <!-- First Projects Grid-->
     <div class="w3-row-padding">
       <div class="w3-third w3-container w3-margin-bottom">
@@ -135,6 +137,7 @@
     </div>
     <!-- End First Projects Grid-->
 
+    <div id="projects-grid-divider"></div>
 
     <!-- Second Projects Grid-->
     <div class="w3-row-padding">
@@ -195,6 +198,8 @@
     </div>
     <!-- End Second Projects Grid-->
 
+    <div id="projects-grid-divider"></div>
+
     <!-- Third Projects Grid-->
     <div class="w3-row-padding">
       <div class="w3-third w3-container w3-margin-bottom">
@@ -254,6 +259,7 @@
     </div>
     <!-- End Third Projects Grid-->
 
+    <div id="projects-grid-divider"></div>
 
     <!-- Fourth Projects Grid-->
     <div class="w3-row-padding">
@@ -314,11 +320,13 @@
     </div>
     <!-- End Fourth Projects Grid-->
 
+    <div id="projects-grid-divider"></div>
+
     <!-- Footer -->
     <div class="w3-black w3-center w3-padding-24">
       <p>Designed & Developed by Corey Recai </p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a>
     </div>
-    <!-- ENDFooter -->
+    <!-- End Footer -->
 
     <!-- End page content -->
   </div>
