--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <div class="main">
         <!-- Begin Cards -->
         <div class="row">
-            <div class="col s12 m9 l4 offset-m2">
+            <div class="col s12 m6 l6">
                 <div class="card horizontal">
                     <div class="card-image grey lighten-2 valign-wrapper">
                         <i id="card-icon" class="material-icons">school</i>
                     </div>
                     <div class="card-stacked">
-                        <div class="card-content center-align">
+                        <div id="card-content" class="card-content center-align">
                             <p>High School of Graphic Communication Arts</p>
                             <p>
                                 ITC Job #:<br>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 m12 l4 offset-m2">
+            <div class="col s12 m6 l6">
                 <div class="card horizontal">
                     <div class="card-image grey lighten-2 valign-wrapper">
                         <i id="card-icon" class="material-icons">school</i>
@@ -77,7 +77,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 m12 l4 offset-m2">
+        </div>
+        <div class="row">
+            <div class="col s12 m6 l6">
                 <div class="card horizontal">
                     <div class="card-image grey lighten-2 valign-wrapper">
                         <i id="card-icon" class="material-icons">school</i>
