Added line spacer for jobs with no LLW or Design number.

--- a/project-cards.html
+++ b/project-cards.html
@@ -33,7 +33,7 @@
                 <div id="card-content" class="card-content center-align">
                     <p style="font-weight: bold;">Brooklyn High School Of The Arts (PS 656K)</p>
                     <p>
-                        ITC Job #: <a href="#">B18-411</a><br>
+                        ITC Job #: <a href="#">B18-410</a><br>
                         LLW #:<br>
                         Design #:
                     </p>
@@ -54,23 +54,21 @@
     <div class="col s12 m6 l6">
         <div class="card horizontal">
             <div class="card-image grey lighten-2 valign-wrapper">
-                <i id="card-icon" class="material-icons">school</i>
+                <i id="card-icon" class="material-icons">local_hospital</i>
             </div>
             <div class="card-stacked">
                 <div id="card-content" class="card-content center-align">
-                    <p>High School of Graphic Communication Arts</p>
+                    <p style="font-weight: bold;">Bronx VA - James J. Peters VA Medical Center</p>
                     <p>
-                        ITC Job #:<br>
-                        LLW #:<br>
-                        Design #:
+                        ITC Job #: <a href="#">B18-412</a>
                     </p>
-                    <p>
-                        439 West 49th Street <br>
-                        New York, NY 10019
-                    </p>
+                    <div id="line-spacer"></div>
+                    <a href="https://www.google.com/maps?saddr=My+Location&daddr=James+J.+Peters+VA+Medical+Center-Marian+Maher,+RKT,+130+W+Kingsbridge+Rd,+The Bronx,+NY+10468"
+                        target="_blank">130 W Kingsbridge Road<br>
+                        Bronx, NY 10468</a>
                 </div>
                 <div class="card-action center-align">
-                    <a class="btn orange" href="#">Active</a>
+                    <a id="project-status-complete" class="btn green" href="#"></a>
                 </div>
             </div>
         </div>
