Configured line spacer to coreect rem to be eqaul to other cards.

--- a/project-cards.html
+++ b/project-cards.html
@@ -68,7 +68,7 @@
                         Bronx, NY 10468</a>
                 </div>
                 <div class="card-action center-align">
-                    <a id="project-status-complete" class="btn green" href="#"></a>
+                    <a id="project-status-active" class="btn orange" href="#"></a>
                 </div>
             </div>
         </div>
